ingress-kubernetes/ingress.yaml
# File ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-ingress
spec:
  ingressClassName: istio
  rules:
  - host: booking.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 80
